# SuperMarketing

./: README.md  brand_import_example.md  pyproject.toml  requirements.txt  setup.py
SuperMarketing/: __init__.py  __main__.py
SuperMarketing/BrandContext/: BRAND_CONTEXT.md  __init__.py  active_brand.json  brand_scraper.py
SuperMarketing/BrandContext/brands/example/: brand.json
SuperMarketing/BrandContext/brands/example_ecommerce/: brand.json  metrics.json  personas.json
SuperMarketing/BrandContext/brands/example_tech_startup/: brand.json  metrics.json  personas.json
SuperMarketing/BrandContext/brands/example_tech_startup/ab_tests/: email_subject_ai_messaging.json
SuperMarketing/BrandContext/brands/example_tech_startup/campaigns/: 2024_q1_product_launch.json
SuperMarketing/Commands/: __init__.py  analyze.md  brand.md  campaign.md  create.md  measure.md  optimize.md  report.md  strategy.md  test.md  workflow.md
SuperMarketing/Core/: CAMPAIGNS.md  CHANNELS.md  COMMANDS.md  MARKETING.md  METRICS.md  PERSONAS.md  PRINCIPLES.md  RULES.md  __init__.py
SuperMarketing/Templates/: __init__.py
